--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "esm": "^3.2.25",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3"
   }
 }
