--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
